# ai-test-workflow

./: .gitignore  README.md  frameshot.sh  next_plan.md  plan.md  pyproject.toml  run.sh  screenshot.sh  test.py
config/: credentials.example.yaml  settings.example.yaml
game_agent/: __init__.py  __main__.py  exceptions.py  main.py  paths.py
scripts/: aggregate_process_log_timing.py  analyze_frame_burst.py  probe_dialogue_dim_regions.py
skills/: SKILL.md  game_launch_ocr_skill.md  gameturbo_log_baseline_skill.md  plugin_accel_log_skill.md
tests/: checkbox_images.py  test_action_frame.py  test_adaptive_routing.py  test_adaptive_tree_dedup.py  test_adaptive_tree_materialize.py  test_adb_devices.py  test_adb_wait_seconds.py  test_apk_resolver.py  test_atomic_login_fill.py  test_batch_cleanup.py  test_batch_shutdown.py  test_batch_urls.py  test_bbox_for_text.py  test_behavior_chain.py  test_blocking_overlay.py  test_checkbox_local_image.py  test_checkbox_locator.py  test_config_loader.py  test_deploy_runner_queue.py  test_deploy_shutdown.py  test_dialogue_advance_state.py  test_dialogue_dim_locator.py  test_dialogue_heuristics.py  test_dismiss_blank_modal.py  test_enter_gate_planner.py  test_exit_confirm_dialog.py  test_external_services.py  test_foreground_coordinator.py  test_gameturbo_bootstrap_gid.py  test_gameturbo_log_anomaly.py  test_gameturbo_log_merge.py  test_gameturbo_paths_queue.py  test_gameturbo_prepare_installable.py  test_gate_routing.py  test_generic_behavior_chain.py  test_i18n_lexicon.py  test_in_game_agent.py  test_in_game_hud_ocr.py  test_in_game_play_session.py  (+83 more)
(+298 files in other folders)
