[project]
name = "android-ai-driven-test"
version = "0.1.0"
description = "Game login agent (Pydantic-AI + ADB); GameTurbo deploy is invoked separately."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-ai-slim[openai]>=0.0.42",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "paddleocr>=2.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["game_agent*"]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
adb-tap = "game_agent.tools.adb_tap:main"
wait-for-package = "game_agent.tools.wait_for_package:main"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
